fix typo in name and add homepage ref

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "homepage",
+  "homepage": "https://hanabisu.github.io/homepage/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
